--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
   },
   "require": {
     "php": ">=7.1",
-    "laravel/framework": "^5.2.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0"
+    "laravel/framework": "^5.2.0 || ^6.0 || ^7.0 || ^8.0 || ^9.0" || ^10.0"
   }
 }
